postcss/testData/inspections/annotator/nestedRulesetWithoutAmpersand.pcss
h1 {
    <error descr="Nested ruleset selector should start with '&'">h2</error> {
        color: white;
    }

    h2 &, <error descr="Nested ruleset selector should start with '&'">h1</error> {
        color: white;
    }
}